[gd_scene load_steps=9 format=3 uid="uid://x10k41fn8cyv"]

[ext_resource type="Script" path="res://src/objects/marble.gd" id="1_ajff0"]
[ext_resource type="PackedScene" uid="uid://bnrp7ftlg6iow" path="res://assets/katamari.tscn" id="2_hhtmx"]
[ext_resource type="Texture2D" uid="uid://dt2fm6sre40ia" path="res://assets/tex/indicator.png" id="3_mwedp"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wt7a8"]
friction = 0.0

[sub_resource type="SphereShape3D" id="SphereShape3D_rbvun"]
margin = 0.0

[sub_resource type="SphereShape3D" id="SphereShape3D_niu6h"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_me7fr"]
radius = 0.33

[sub_resource type="SphereShape3D" id="SphereShape3D_c4mos"]
radius = 0.1

[node name="Marble" type="RigidBody3D"]
collision_layer = 2
center_of_mass_mode = 1
physics_material_override = SubResource("PhysicsMaterial_wt7a8")
gravity_scale = 0.0
max_contacts_reported = 64
contact_monitor = true
freeze_mode = 1
script = ExtResource("1_ajff0")
metadata/SizeThresholds = PackedFloat32Array(1, 3, 10, 35)

[node name="KatamariColliderShape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_rbvun")

[node name="KatamariModel" parent="." instance=ExtResource("2_hhtmx")]
transform = Transform3D(1.35, 0, 0, 0, 1.35, 0, 0, 0, 1.35, 0, 0, 0)

[node name="CenterNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CenterNode"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0)
collision_mask = 0
spring_length = 4.0
margin = 0.1

[node name="CameraRemoteTransform" type="RemoteTransform3D" parent="CenterNode/SpringArm3D"]

[node name="CollectibleNocollider" type="Area3D" parent="."]
collision_layer = 0

[node name="NocolliderShape" type="CollisionShape3D" parent="CollectibleNocollider"]
shape = SubResource("SphereShape3D_niu6h")

[node name="CollectibleGrabber" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="KatamariCollectorShapeMiddle" type="CollisionShape3D" parent="CollectibleGrabber"]
shape = SubResource("SphereShape3D_me7fr")

[node name="KatamariCollectorShapeBottom" type="CollisionShape3D" parent="CollectibleGrabber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("SphereShape3D_c4mos")

[node name="debug_axis" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.695604, 0, 0)
pixel_size = 0.003
billboard = 1
no_depth_test = true
texture_filter = 1
texture = ExtResource("3_mwedp")

[node name="CameraAnchor" type="RayCast3D" parent="."]

[node name="CollisionBackup" type="RayCast3D" parent="."]
